src/components/board.module.css
.game {
  display: flex;
  flex-direction: column;
  font-weight: 800;
  align-items: center;
}

.game.over {
  color: #d7385e;
}
.game.paused {
  color: #ff9a00;
}
.game.running {
  color: #00b8a9;
}

.board {
  display: flex;
  flex-direction: row;
  justify-content: center;
  margin-top: 20px;
}
.border {
  color: gray;
  border-width: 3px;
  border-style: solid;
}

.lines {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.blockLine {
  display: flex;
  flex-direction: row;
  align-items: flex-start;
}

.next {
  margin-left: 25px;
  color: gray;
}

.square {
  float: left;
  width: 12px;
  border-width: 2px;
  border-style: solid;
  padding: 2px;
  margin: 1px;
}

:root {
  --none: lightgray;
  --i: #27496d;
  --j: #0c7b93;
  --l: #00b8a9;
  --o: #d7385e;
  --s: #fc5185;
  --t: #fb7b6b;
  --z: #ff9a00;
}

.square.none {
  border-color: var(--none);
}
.square.I {
  border-color: var(--i);
}
.square.J {
  border-color: var(--j);
}
.square.L {
  border-color: var(--l);
}
.square.O {
  border-color: var(--o);
}
.square.S {
  border-color: var(--s);
}
.square.T {
  border-color: var(--t);
}
.square.Z {
  border-color: var(--z);
}

.internSquare {
  width: 12px;
  height: 12px;
}

.internSquare.none {
  background: var(--none);
}
.internSquare.I {
  background: var(--i);
}
.internSquare.J {
  background: var(--j);
}
.internSquare.L {
  background: var(--l);
}
.internSquare.O {
  background: var(--o);
}
.internSquare.S {
  background: var(--s);
}
.internSquare.T {
  background: var(--t);
}
.internSquare.Z {
  background: var(--z);
}

.help {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-between;
  margin-right: 15px;
}
.descriptions {
  font-weight: 800;
  display: flex;
  flex-direction: column;
  align-items: center;
}
.instructions {
  margin-left: 15px;
  display: flex;
  flex-direction: column;
  align-items: flex-start;
}
.scores {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  margin-bottom: 20px;
  padding: 10px;
}
.score {
  font-weight: 800;
  display: flex;
  flex-direction: column;
  align-items: flex-start;
}
.values {
  margin-left: 15px;
}

